[新增] 使用者MVC 相關註解
